--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <script src=""></script>
+    <script src="">https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js</script>
     <script src="script.js"></script>
 </body>
 </html>
