--- a/index.html
+++ b/index.html
@@ -7,8 +7,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="viewer">
+        <button class="prev"></button>
+        <div class="photo"></div>
+        <button class="next"></button>
+    </div>
     
-    <script src="">https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js</script>
+        <ul class="navbar">
+            <li class="index one"></li>
+            <li class="index two"></li>
+            <li class="index three"></li>
+            <li class="index four"></li>
+            <li class="index five"></div>
+            <li class="index six"></li>
+            <li class="index seven"></li>
+            <li class="index eight"></li>
+            <li class="index nine"></li>
+            <li class="index ten"></li>
+        </ul>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
