--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <div class="viewer">
-        <button class="prev"></button>
+        <button class="prev">
+            <div class="icon prev"></div>
+        </button>
         <div class="photo"></div>
-        <button class="next"></button>
+        <button class="next">
+            <div class="icon prev"></div>
+        </button>
     </div>
     
         <ul class="navbar">
