--- a/index.html
+++ b/index.html
@@ -5,29 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fairy Garden</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="viewer">
         <button class="prev">
             <div class="icon prev"></div>
         </button>
-        <div class="photo"></div>
+        <div class="photo">
+            <div class="text">
+                <h1>Trachelospermum jasminoides - Star jasmine</h1>
+                <p>Star jasmine is a vine that produces highly fragrant, white blossoms that attract bees. A valuable perfume oil is extracted from the steam distilled or tinctured flowers and used in high end perfumery.</p>
+            </div>
+        </div>
         <button class="next">
             <div class="icon prev"></div>
         </button>
     </div>
     
         <ul class="navbar">
-            <li class="index one"></li>
-            <li class="index two"></li>
-            <li class="index three"></li>
-            <li class="index four"></li>
-            <li class="index five"></div>
-            <li class="index six"></li>
-            <li class="index seven"></li>
-            <li class="index eight"></li>
-            <li class="index nine"></li>
-            <li class="index ten"></li>
+            <li class="index one">
+                <span class="tooltiptext">Star jasmine</span>
+            </li>
+            <li class="index two">
+                <span class="tooltiptext">Stinking passionflower</span>
+            </li>
+            <li class="index three">
+                <span class="tooltiptext">Fairy thimble</span>
+            </li>
+            <li class="index four">
+                <span class="tooltiptext">Lenten rose</span>
+            </li>
+            <li class="index five">
+                <span class="tooltiptext">Liverwort</span>
+            </div>
+            <li class="index six">
+                <span class="tooltiptext">White jasmine</span>
+            </li>
+            <li class="index seven">
+                <span class="tooltiptext">Lemon thyme</span>
+            </li>
+            <li class="index eight">
+                <span class="tooltiptext">Passionflower</span>
+            </li>
+            <li class="index nine">
+                <span class="tooltiptext">Butterfly bush</span>
+            </li>
+            <li class="index ten">
+                <span class="tooltiptext">Rangpur fruit</span>
+            </li>
         </ul>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
