--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="photo">
             <img id="picture" src="" alt="Star jasmine" width="100%"> 
             <div class="text">
-                <h1 id="title">Trachelospermum jasminoides - Star jasmine</h1>
-                <p id="description">Star jasmine is a vine that produces highly fragrant, white blossoms that attract bees. A valuable perfume oil is extracted from the steam distilled or tinctured flowers and used in high end perfumery.</p>
+                <h1 id="title"></h1>
+                <p id="description"></p>
             </div>
         </div>
         <button class="next">
