--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="viewer">
-        <button class="prev">
+        <button class="prev" id="previous">
             <div class="icon prev"></div>
         </button>
         <div class="photo">
@@ -19,7 +19,7 @@
                 <p id="description"></p>
             </div>
         </div>
-        <button class="next">
+        <button class="next" id="nextp">
             <div class="icon prev"></div>
         </button>
     </div>
